--- a/Portfolio_React/src/index.css
+++ b/Portfolio_React/src/index.css
@@ -2,3 +2,13 @@
     max-width: 300px; /* Set the maximum width to 300px */
     
   }
+  .footer {
+    position: fixed;
+    /* left: 0; */
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
